# formulae-cxx

./: CMakeLists.txt  LICENSE  README.md  main.cpp
fonts/: this.dvi
include/: formulae.h
include/dvi/: DviCmd.h  DviState.h  Out.h  OutDvi.h  OutHigh.h  SetBox.h  SetNode.h  ShipOut.h
include/font/: ChangeStyle.h  CharFunctions.h  CharInfo.h  FontParams.h  FontTypes.h  FontVector.h  LoadFont.h  Size.h  StyleParams.h
include/general/: BasicTypes.h  Const.h  Distance.h  General.h  Powers2.h  unit.h
include/input/: Input.h
include/interm/: Boundaries.h  ChangeKind.h  IListDim.h  IListTypes.h  MathPenalty.h
include/interm/types/: IL0_Item.h  IL1_INoad.h  IL1_IPen.h  IL1_ISpace.h  IL1_IStyle.h
include/math/: Accent.h  Kind.h  MathGlue.h  MathSpace.h  MathTypes.h  Radical.h  Spacing.h
include/math/types/: MT0.h  MT1_Space.h  MT2_Noad.h  MT3_Accent.h  MT3_BigOp.h  MT3_Choice.h  MT3_GenFraction.h  MT3_Kind.h  MT3_LeftRight.h  MT3_MList.h  MT3_MPen.h  MT3_MSpace.h  MT3_MathChar.h  MT3_Overline.h  MT3_Radical.h  MT3_Script.h  MT3_Style.h  MT3_SubBox.h  MT3_Underline.h  MT3_VCenter.h
include/node/: AxisCenter.h  BasicBox.h  BasicChar.h  BoxPack.h  BoxTypes.h  Delimiter.h  GenFraction.h  GlueCalculation.h  HListGlue.h  MakeAtop.h  MakeChar.h  MakeFract.h  MakeLimOp.h  MakeLine.h  MakeScripts.h  MakeVBox.h  NodeDim.h  NodeListDim.h
include/node/types/: ND0.h  ND1_Box.h  ND1_Node.h  ND2_Box.h  ND2_Char.h  ND2_Glue.h  ND2_Kern.h  ND2_Penalty.h  ND2_Rule.h
include/trans/: IListTranslate.h  MathTranslate.h
src/dvi/: DviCmd.cpp  DviState.cpp  Out.cpp  OutDvi.cpp  OutHigh.cpp  SetBox.cpp  SetNode.cpp  ShipOut.cpp
src/font/: ChangeStyle.cpp  CharFunctions.cpp  CharInfo.cpp  FontParams.cpp  FontVector.cpp  LoadFont.cpp  StyleParams.cpp
src/general/: Distance.cpp
src/input/: Input.cpp
src/interm/: Boundaries.cpp  ChangeKind.cpp  IListDim.cpp  MathPenalty.cpp
src/math/: MathSpace.cpp  Spacing.cpp
src/node/: BasicBox.cpp  BasicChar.cpp  BoxPack.cpp  Delimiter.cpp  GlueCalculation.cpp  MakeAtop.cpp  MakeChar.cpp  MakeFract.cpp  MakeLimOp.cpp  MakeScripts.cpp  NodeDim.cpp  NodeListDim.cpp
src/trans/: IListTranslate.cpp  MathTranslate.cpp
